--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       crossorigin="anonymous"
     ></script>
   </head>
+
+
   <body>
     <nav>
       <div class="nav__content">
@@ -24,16 +26,16 @@
         </label>
         <input type="checkbox" name="check" id="check" />
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Skills</a></li>
-          <li><a href="#">Experience</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Education</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
-    <section class="section">
+    <section id="home" class="section">
       <div class="section__container">
         <div class="content">
           <p class="subtitle">HELLO</p>
@@ -219,7 +221,7 @@
       </div>
     </section>
 
-    <section class="experience-section">
+    <section id="experience" class="experience-section">
       <h2>Experience</h2>
 
       <div class="timeline">
@@ -310,7 +312,7 @@
       </div>
     </section>
 
-    <section class="projects-section">
+    <section id="projects" class="projects-section">
       <h2>Projects</h2>
       <div class="projects-container">
         <!-- Project 1 -->
@@ -382,7 +384,7 @@
       </div>
     </section>
 
-    <section class="education-section">
+    <section id="education" class="education-section">
       <div class="education-container">
         <h2>Education</h2>
 
@@ -433,7 +435,7 @@
       </div>
     </section>
 
-    <section id="contact" style="background-color: var(--extra-light); padding: 2rem; border-radius: 10px; text-align: center; margin: 0 auto; width: 80%; max-width: 600px;">
+    <section id="contact" style="background-color: var(--extra-light); padding: 2rem; border-radius: 10px; text-align: center; margin: 0px auto 70px auto; width: 80%; max-width: 600px;">
       <h2>Contact Me</h2>
       <div class="contact-buttons">
         <a href="https://www.linkedin.com/in/harshapeteti/" target="_blank" class="contact-button">LinkedIn Profile</a>
