--- a/index.html
+++ b/index.html
@@ -37,11 +37,15 @@
     </nav>
     <section id="home" class="section">
       <div class="section__container">
+        <div class="image">
+          <img src="harsha.jpg" alt="profile" />
+        </div>
         <div class="content">
           <p class="subtitle">HELLO</p>
           <h1 class="title">
-            I'm <span>Harsha Peteti<br />a</span> Grad Student @UNC Charlotte
-          </h1>
+            I'm Harsha Peteti<br />Grad Student @ UNC Charlotte
+        </h1>
+        
           <p class="description">
             Passionate and detail-oriented Data & Analytics professional with an
             unwavering commitment to turning complex challenges into innovative
@@ -54,13 +58,11 @@
             seeking full-time opportunities where I can leverage my analytical
             mindset and technical skills to create impactful solutions.
           </p>
-          <div class="action__btns">
+          <!-- <div class="action__btns">
             <button class="Resume">Resume</button>
-          </div>
+          </div> -->
         </div>
-        <div class="image">
-          <img src="harsha.jpg" alt="profile" />
-        </div>
+        
       </div>
     </section>
 
@@ -201,7 +203,7 @@
 
           <!-- Web Tech Section -->
           <div class="skill__box">
-            <h3>Web Tech</h3>
+            <h3>Web Technologies</h3>
             <div class="skills__grid">
               <span class="skill__item"
                 ><i class="fa-brands fa-react"></i> React</span
@@ -234,7 +236,7 @@
             <h3>Business Operations Analyst</h3>
             <h4>Avanti Group</h4>
             <h5>Part Time</h5>
-            <span class="date">May 2020 - April 2023</span>
+            <span class="date">May 2022 - June 2023</span>
             <p>
               As a Business Operations Analyst at Avanti Group, I managed
               inventory control and supply chain operations for shrimp feed and
@@ -418,7 +420,7 @@
           <h4>Electronics and Communication Engineering</h4>
           <h4>
             <strong>Vellore Institute of Technology</strong>
-            <p><em>July 2023 - May 2023</em></p>
+            <p><em>July 2019 - May 2023</em></p>
           </h4>
 
           <h4><strong>Coursework:</strong></h4>
