--- a/project8.html
+++ b/project8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revenue Intelligence Dashboard for AtliQ Grands Hospitality</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
         :root {
             --extra-light: #f8f9fa; /* Adjust this color to your preference */
@@ -110,7 +110,7 @@
             <div class="skill">Data Cleaning</div>
         </div>
 
-        <img src="project8.jpg" alt="Project Image" style="width: 950px; height: auto;">
+        <img src="project8.jpg" alt="Project Image" style="width: 100%; height: auto;">
 
 
         
