--- a/project1.html
+++ b/project1.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revenue Intelligence Dashboard for AtliQ Grands Hospitality</title>
-    <link rel="stylesheet" href="style.css">
     <style>
         :root {
             --extra-light: #f8f9fa; /* Adjust this color to your preference */
@@ -36,7 +35,7 @@
         }
 
         h2 {
-            margin-top: 20px;
+            margin-top: 100px;
         }
 
         p {
@@ -112,32 +111,35 @@
             <div class="skill">Strategic Planning</div>
         </div>
 
-        <img src="project1.jpg" alt="Project Image" style="width: 950px; height: auto;">
+        <img src="project1.jpg" alt="Project Image" style="width: 100%; height: auto;">
 
+        <div class="dataset">
+            <h2>Dataset Overview</h2>
+            <p>This project analyzes data from multiple sources, consolidated into five CSV files:</p>
+            <ul>
+                <li class="point"><strong>dim_date.csv:</strong> Contains date-related information for analyzing bookings and trends over time.</li>
+                <li class="point"><strong>dim_hotels.csv:</strong> Provides details on the hotel properties owned by AtliQ Grands.</li>
+                <li class="point"><strong>dim_rooms.csv:</strong> Describes room types and classifications.</li>
+                <li class="point"><strong>fact_aggregated_bookings.csv:</strong> Aggregated booking data for occupancy and performance analysis.</li>
+                <li class="point"><strong>fact_bookings.csv:</strong> Detailed transactional data for individual bookings.</li>
+            </ul>
+        </div>
 
-        <h2>Dataset Overview</h2>
-        <p>This project analyzes data from multiple sources, consolidated into five CSV files:</p>
-        <ul>
-            <li class="point"><strong>dim_date.csv:</strong> Contains date-related information for analyzing bookings and trends over time.</li>
-            <li class="point"><strong>dim_hotels.csv:</strong> Provides details on the hotel properties owned by AtliQ Grands.</li>
-            <li class="point"><strong>dim_rooms.csv:</strong> Describes room types and classifications.</li>
-            <li class="point"><strong>fact_aggregated_bookings.csv:</strong> Aggregated booking data for occupancy and performance analysis.</li>
-            <li class="point"><strong>fact_bookings.csv:</strong> Detailed transactional data for individual bookings.</li>
-        </ul>
-        
-        <h2>Description</h2>
-        <ul>
-            <li class="point">Analyzed performance data from five key sources, identifying substantial opportunities for revenue growth and operational improvement.</li>
-            <li class="point">Provided insights on key metrics such as RevPAR, occupancy rates, and room utilization to optimize booking efficiency.</li>
-            <li class="point">Formulated targeted strategies for underperforming properties, leading to enhanced room usage and better overall operational efficiency.</li>
-            <li class="point">Developed a suite of metrics that align with stakeholder requirements.</li>
-            <li class="point">Designed and built a dashboard based on provided mock-ups, ensuring clear, data-driven insights.</li>
-            <li class="point">Discovered additional insights beyond the original scope, offering strategic recommendations to enhance revenue management.</li>
-            <li class="point">Gained a solid understanding of Revenue Per Available Room (RevPAR) and its importance in assessing hotel performance.</li>
-            <li class="point">Utilized RevPAR to inform pricing strategies and benchmark hotel performance against competitors.</li>
-            <li class="point">Employed metrics like DBRN, DSRN, and DURN to evaluate room utilization and occupancy patterns across properties.</li>
-            <li class="point">Identified opportunities for optimization in room occupancy rates, enhancing overall operational efficiency.</li>
-        </ul>
+        <div class="projectDescription">
+            <h2>Description</h2>
+            <ul>
+                <li class="point">Analyzed performance data from five key sources, identifying substantial opportunities for revenue growth and operational improvement.</li>
+                <li class="point">Provided insights on key metrics such as RevPAR, occupancy rates, and room utilization to optimize booking efficiency.</li>
+                <li class="point">Formulated targeted strategies for underperforming properties, leading to enhanced room usage and better overall operational efficiency.</li>
+                <li class="point">Developed a suite of metrics that align with stakeholder requirements.</li>
+                <li class="point">Designed and built a dashboard based on provided mock-ups, ensuring clear, data-driven insights.</li>
+                <li class="point">Discovered additional insights beyond the original scope, offering strategic recommendations to enhance revenue management.</li>
+                <li class="point">Gained a solid understanding of Revenue Per Available Room (RevPAR) and its importance in assessing hotel performance.</li>
+                <li class="point">Utilized RevPAR to inform pricing strategies and benchmark hotel performance against competitors.</li>
+                <li class="point">Employed metrics like DBRN, DSRN, and DURN to evaluate room utilization and occupancy patterns across properties.</li>
+                <li class="point">Identified opportunities for optimization in room occupancy rates, enhancing overall operational efficiency.</li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
