--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revenue Intelligence Dashboard for AtliQ Grands Hospitality</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
         :root {
             --extra-light: #f8f9fa; /* Adjust this color to your preference */
@@ -108,7 +108,7 @@
             <div class="skill">Python</div>
         </div>
 
-        <img src="pr2.png" alt="Project Image" style="width: 950px; height: auto;">
+        <img src="pr2.png" alt="Project Image" style="width: 100%; height: auto;">
 
         
         
