--- a/project6.html
+++ b/project6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Revenue Intelligence Dashboard for AtliQ Grands Hospitality</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
         :root {
             --extra-light: #f8f9fa; /* Adjust this color to your preference */
