--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <img src="harsha.jpg" alt="profile" />
         </div>
         <div class="content">
-          <p class="subtitle">HELLO</p>
+          <h1 class="subtitle">HELLO<strong>👋</strong></h1>
           <h1 class="title">
             I'm Harsha Peteti<br />Grad Student @ UNC Charlotte
         </h1>
