--- a/index.html
+++ b/index.html
@@ -47,16 +47,7 @@
         </h1>
         
           <p class="description">
-            Passionate and detail-oriented Data & Analytics professional with an
-            unwavering commitment to turning complex challenges into innovative
-            solutions. Currently pursuing my Master's in Information Technology
-            at UNC Charlotte, I bring three years of hands-on experience in
-            business operations and analytics. My expertise in data
-            visualization, cloud computing, and machine learning, combined with
-            a proven track record of driving business growth, positions me
-            uniquely to tackle challenging technical problems. I am actively
-            seeking full-time opportunities where I can leverage my analytical
-            mindset and technical skills to create impactful solutions.
+            Passionate and detail-oriented Data & Analytics professional with a strong commitment to transforming complex challenges into innovative solutions. I hold a Master's in Information Technology from UNC Charlotte and bring three years of hands-on experience in business operations and analytics. My expertise spans data visualization, cloud computing, and machine learning, with a proven track record of driving business growth through data-driven insights. I am actively seeking full-time opportunities where I can apply my analytical mindset and technical skills to create impactful solutions.
           </p>
           <!-- <div class="action__btns">
             <button class="Resume">Resume</button>
@@ -235,7 +226,6 @@
           <div class="timeline-content">
             <h3>Business Operations Analyst</h3>
             <h4>Avanti Group</h4>
-            <h5>Part Time</h5>
             <span class="date">May 2022 - June 2023</span>
             <p>
               As a Business Operations Analyst at Avanti Group, I managed
