--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="content">
           <h1 class="subtitle">HELLO<strong>👋</strong></h1>
           <h1 class="title">
-            I'm Harsha Peteti<br />Grad Student @ UNC Charlotte
+            I'm Harsha Peteti<br />
         </h1>
         
           <p class="description">
