--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@ solutions.
             <img style="width: 5em;" src="avanti.jpg" alt="Avanti Group" />
           </div>
           <div style="margin-top: -40px;" class="timeline-content">
-            <h3>Business Operations Analyst</h3>
-            <h4>Avanti Feeds Limited</h4>
+            <h3>Data Analyst</h3>
+            <h4>Avanti Group</h4>
             <span class="date">May 2022 - June 2023</span>
             <p>
-              As a Business Operations Analyst at Avanti Group, I managed
+              As a Data Analyst at Avanti Group, I managed
               inventory control and supply chain operations for shrimp feed and
               medicine products, ensuring timely order fulfillment and optimal
               stock levels. I conducted comprehensive sales analysis, tracked
