--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ solutions.
             <img style="width: 5em;" src="avanti.jpg" alt="Avanti Group" />
           </div>
           <div style="margin-top: -40px;" class="timeline-content">
-            <h3>Data Analyst</h3>
+            <h3>Business Operations Analyst</h3>
             <h4>Avanti Group</h4>
             <span class="date">May 2022 - June 2023</span>
             <p>
