new certifications added

--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@ solutions.
             <img style="width: 5em;" src="avanti.jpg" alt="Avanti Group" />
           </div>
           <div style="margin-top: -40px;" class="timeline-content">
-            <h3>Business Operations Analyst</h3>
+            <h3>Data Analyst</h3>
             <h4>Avanti Group</h4>
-            <span class="date">May 2022 - June 2023</span>
+            <span class="date">May 2021 - June 2023</span>
             <p>
               As a Data Analyst at Avanti Group, I managed
               inventory control and supply chain operations for shrimp feed and
@@ -409,6 +409,27 @@ solutions.
     <section id="certifications" class="projects-section">
       <h2>Certifications</h2>
       <div class="projects-container">
+        <!-- Certifications 1 -->
+        <div class="project-box">
+          <a target="_blank" href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=8E676F1D7D3AACCF4DFC3F4EB2CA23A7FF7EA6D0BDD494FCD92ACE9C733990DD">
+            <img src="DB23AIOCP (1).jpg" alt="certification 11" />
+            <h3>ORACLE AI VECTOR SEARCH PROFESSIONAL </h3>
+          </a>
+        </div>
+        <!-- Certifications 2 -->
+        <div class="project-box">
+          <a target="_blank" href="https://catalog-education.oracle.com/ords/certview/sharebadge?id=2877EE06B4FF673A7B5D2CB5C98359FE2B1F395CB4CA4C23FD88F0DD5F55E739">
+            <img src="OCI25AICFA.jpg" alt="certification 2" />
+            <h3>ORACLE AI FOUNDATIONS ASSOCIATE</h3>
+          </a>
+        </div>
+        <!-- Certifications 3 -->
+        <div class="project-box">
+          <a target="_blank" href="https://credentials.databricks.com/3d9403ce-ef4b-43c8-b6ce-b72dbe92a056#acc.nkJtL8TX">
+            <img src="certification13.jpg" alt="certification3" />
+            <h3>GENERATIVE AI FUNDAMENTALS</h3>
+          </a>
+        </div>
         <!-- Certifications 1 -->
         <div class="project-box">
           <a target="_blank" href="https://www.credly.com/badges/0176b1d1-546e-4818-8c6e-e47c65f0ca0e">
